--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
     <div class="container1">
       <div class="box">
 
-        <div class="bad" ><h1>Computer</h1></div>
+        <div class="bad" ><h1>CP</h1></div>
         
         <div id="bad" > 
             <img class="imgs" id="ximage0" src="paper.png" alt="paper">
